FIX: Tweak to ResourcePanelInfo to fit text better in panel on mobile devices. [t14771]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10547 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/responsive/slim-style.css
+++ b/css/responsive/slim-style.css
@@ -675,7 +675,6 @@
         text-align:center;
         height: 35px;
         white-space: normal;
-        margin: 10px 5px 5px 5px;
     }
     .BottomInpageNav .InpageNavLeftBlock {
         width:auto;
